WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152963
It should be possible to run liveness over registers without also tracking Tmps
https://bugs.webkit.org/show_bug.cgi?id=152963
Summary
It should be possible to run liveness over registers without also tracking Tmps
Filip Pizlo
Reported
2016-01-10 11:24:04 PST
Tracking Tmps is expensive, tracking Regs is cheap. We sometimes need to compute liveness of Regs only. That should be cheap and not expensive.
Attachments
the patch
(15.80 KB, patch)
2016-01-10 11:46 PST
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-01-10 11:46:46 PST
Created
attachment 268660
[details]
the patch Not ready for review yet because I haven't run all of the tests yet.
WebKit Commit Bot
Comment 2
2016-01-10 12:05:32 PST
Attachment 268660
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/b3/air/AirInstInlines.h:82: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3
2016-01-10 14:01:43 PST
Comment on
attachment 268660
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=268660&action=review
r=me
> Source/WTF/ChangeLog:15 > + BitVector other than this, so it doesn't make sense to made it harder to access.
made=>make
Filip Pizlo
Comment 4
2016-01-10 16:59:08 PST
Landed in
http://trac.webkit.org/changeset/194834
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug